--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,8 +9,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activity.TestActivity"
-    tools:showIn="@layout/activity_test">
+    tools:context=".activity.MainActivity"
+    tools:showIn="@layout/activity_main">
 
 
     <TextView
