--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -9,8 +9,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activity.ScheduleActivity"
-    tools:showIn="@layout/app_bar_schedule">
+    tools:context=".activity.SettingsActivity"
+    tools:showIn="@layout/app_bar_settings">
 
     <Button
         android:layout_width="wrap_content"
