--- a/app/src/main/res/menu/nav_items.xml
+++ b/app/src/main/res/menu/nav_items.xml
@@ -3,6 +3,10 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_profile"
+            android:icon="@drawable/ic_profile"
+            android:title="프로필" />
+        <item
             android:id="@+id/nav_schedule"
             android:icon="@drawable/ic_schedule"
             android:title="일정" />
