--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -9,7 +9,7 @@
     tools:openDrawer="start">
 
     <include
-        layout="@layout/app_bar_schedule"
+        layout="@layout/app_bar_calendar"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
