--- a/app/src/main/res/layout/content_friend.xml
+++ b/app/src/main/res/layout/content_friend.xml
@@ -12,12 +12,10 @@
     tools:context=".activity.FriendActivity"
     tools:showIn="@layout/app_bar_friend">
 
-    <Button
+    <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button"
+        android:id="@+id/friendListView"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="153dp" />
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
