Add List Adapters

--- a/app/src/main/res/layout/content_calendar.xml
+++ b/app/src/main/res/layout/content_calendar.xml
@@ -12,12 +12,10 @@
     tools:context=".activity.CalendarActivity"
     tools:showIn="@layout/app_bar_calendar">
 
-    <Button
+    <ListView
+        android:id="@+id/calendarListView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="153dp" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 </RelativeLayout>
