--- a/app/src/main/res/layout/calendar_item.xml
+++ b/app/src/main/res/layout/calendar_item.xml
@@ -8,7 +8,7 @@
 
     <ImageView
         android:id="@+id/calendarImage"
-        android:layout_width="80dp"
+        android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_gravity="center_vertical"
         android:layout_marginRight="10dp"
