--- a/app/src/main/res/layout/content_friend.xml
+++ b/app/src/main/res/layout/content_friend.xml
@@ -13,7 +13,7 @@
     tools:showIn="@layout/app_bar_friend">
 
     <ListView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/friendListView"
         android:layout_alignParentTop="true"
