--- a/app/src/main/res/layout/calendar_item.xml
+++ b/app/src/main/res/layout/calendar_item.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="@dimen/fab_margin">
 
     <ImageView
         android:id="@+id/calendarImage"
-        android:layout_width="match_parent"
+        android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_gravity="center_vertical"
         android:layout_marginRight="10dp"
