--- a/app/src/main/res/menu/nav_items.xml
+++ b/app/src/main/res/menu/nav_items.xml
@@ -6,14 +6,22 @@
             android:id="@+id/nav_profile"
             android:icon="@drawable/ic_profile"
             android:title="프로필" />
+
+        <item
+            android:id="@+id/nav_schedule"
+            android:icon="@drawable/ic_schedule"
+            android:title="일정" />
+
         <item
             android:id="@+id/nav_calendar"
             android:icon="@drawable/ic_calendar"
             android:title="캘린더" />
+
         <item
             android:id="@+id/nav_friend"
             android:icon="@drawable/ic_friend"
             android:title="친구" />
+
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_settings"
