--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -8,8 +8,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="jnu.mcl.scheduler.activity.TestActivity$PlaceholderFragment">
 
-    <TextView
-        android:id="@+id/section_label"
+    <ListView
+        android:id="@+id/calendarListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
