--- a/app/src/main/res/layout/content_event.xml
+++ b/app/src/main/res/layout/content_event.xml
@@ -12,4 +12,9 @@
     tools:context="jnu.mcl.scheduler.activity.EventActivity"
     tools:showIn="@layout/activity_event">
 
+    <ListView
+        android:id="@+id/eventListView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></ListView>
+
 </RelativeLayout>
