--- a/app/src/main/res/layout/friend_item.xml
+++ b/app/src/main/res/layout/friend_item.xml
@@ -11,8 +11,8 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_gravity="center_vertical"
-        android:layout_marginRight="10dp"
-        android:src="@drawable/ic_profile" />
+        android:layout_marginRight="15dp"
+        android:src="@drawable/img_profile" />
 
     <LinearLayout
         android:layout_width="wrap_content"
