--- a/app/src/main/res/layout/dialog_event_time.xml
+++ b/app/src/main/res/layout/dialog_event_time.xml
@@ -1,21 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="200dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="@dimen/fab_margin">
 
-    <TextView
+
+    <TimePicker
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:text="이벤트 이름" />
-
-    <EditText
-        android:id="@+id/eventTitleText"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp" />
+        android:layout_marginBottom="50dp"
+        android:id="@+id/timePicker" />
 
     <LinearLayout
         android:layout_width="wrap_content"
