--- a/app/src/main/res/layout/content_event_information.xml
+++ b/app/src/main/res/layout/content_event_information.xml
@@ -4,88 +4,104 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activity.EventInformationActivity"
+    tools:context="jnu.mcl.scheduler.activity.AddEventActivity"
     tools:showIn="@layout/activity_event_information">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="캘린더 이름"
-        android:textSize="30dp"
-        android:layout_marginBottom="10dp"
-        android:id="@+id/textView9"
-        android:layout_gravity="center_horizontal" />
+        android:orientation="horizontal"
+        android:layout_marginBottom="10dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Calendar Name"
-        android:layout_marginBottom="10dp"
-        android:id="@+id/calendarNameText"
-        android:layout_gravity="center_horizontal" />
+        <TextView
+            android:textSize="20dp"
+            android:layout_marginRight="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="캘린더 이름" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="이벤트 이름"
-        android:textSize="30dp"
-        android:layout_marginBottom="10dp"
-        android:id="@+id/textView3"
-        android:layout_gravity="center_horizontal" />
+        <TextView
+            android:id="@+id/calendarNameText"
+            android:text="Calendar Name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Event Title"
-        android:layout_marginBottom="10dp"
-        android:id="@+id/eventTitleText"
-        android:layout_gravity="center_horizontal" />
+    </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="이벤트 시작"
-        android:textSize="30dp"
-        android:layout_marginBottom="10dp"
-        android:id="@+id/textView4"
-        android:layout_gravity="center_horizontal" />
+        android:orientation="horizontal"
+        android:layout_marginBottom="10dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="dtstart"
-        android:layout_marginBottom="10dp"
-        android:id="@+id/dtstartText"
-        android:layout_gravity="center_horizontal" />
+        <TextView
+            android:textSize="20dp"
+            android:layout_marginRight="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="이벤트 이름" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="이벤트 종료"
-        android:textSize="30dp"
-        android:layout_marginBottom="10dp"
-        android:id="@+id/textView5"
-        android:layout_gravity="center_horizontal" />
+        <TextView
+            android:id="@+id/eventTitleText"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/dtstartLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="dtend"
-        android:id="@+id/dtendText"
-        android:layout_gravity="center_horizontal" />
+        android:orientation="horizontal"
+        android:layout_marginBottom="10dp">
+
+        <TextView
+            android:textSize="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="시작" />
+
+        <TextView
+            android:id="@+id/dtstartText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:textSize="20dp"
+            android:text="2015/12/04" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/dtendLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginBottom="10dp">
+
+        <TextView
+            android:textSize="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="종료" />
+
+        <TextView
+            android:id="@+id/dtendText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:textSize="20dp"
+            android:text="2015/12/04" />
+
+    </LinearLayout>
 
 </LinearLayout>
