--- a/app/src/main/res/layout/content_schedule.xml
+++ b/app/src/main/res/layout/content_schedule.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,10 +12,7 @@
     tools:context=".activity.ScheduleActivity"
     tools:showIn="@layout/app_bar_schedule">
 
-    <ListView
-        android:id="@+id/testListView"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-    </ListView>
 
-</RelativeLayout>
+
+
+</LinearLayout>
