Update Schedule Activity

--- a/app/src/main/res/layout/content_schedule.xml
+++ b/app/src/main/res/layout/content_schedule.xml
@@ -8,11 +8,34 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activity.ScheduleActivity"
     tools:showIn="@layout/app_bar_schedule">
 
+    <TextView
+        android:id="@+id/todayText"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Today"
+        android:layout_marginBottom="10dp"
+        android:textSize="25dp"/>
 
+    <TextView
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="오늘의 이벤트"
+        android:textStyle="bold"
+        android:layout_marginBottom="10dp"
+        android:textSize="30dp"/>
 
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </ListView>
 
 </LinearLayout>
