--- a/app/src/main/res/layout/dialog_custom_long_click.xml
+++ b/app/src/main/res/layout/dialog_custom_long_click.xml
@@ -19,7 +19,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="20dp"
         android:text="삭제"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/copyText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="복사"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </LinearLayout>
